Form changes and logos

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<section id="header">
 				<header>
 					<img src="images/logo-heading.png">
-					<p>Women inspiring <span class="inspired">women</span></p>
+					<p> <span class="inspired">Women inspiring Everyone</span></p>
 				</header>
 				<footer>
 					<a href="#reg" class="button style2 scrolly-middle">Add me to the #WIT17 interest list</a>
@@ -57,26 +57,13 @@
 			</section>
 
 		<!-- Feature 1 -->
-			<article id="first" class="container box style1 right">
+			<article id="first" class="container box style1 left">
 				<a href="#" class="image fit"><img src="images/talks.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
 						<h2>TALKS</h2>
 					</header>
-					<p>At Women in Technology, you will hear from speakers who identify as women and currently work in the technology industry.<br /> 
-					We aim to reflect the diversity of careers that exist within the technology sector through providing talks that cover a wide range of technical roles and disciplines.</p>
-				</div>
-			</article>
-
-		<!-- Feature 2 -->
-			<article class="container box style1 left">
-				<a href="#" class="image fit"><img src="images/wshops.jpg" alt="" /></a>
-				<div class="inner">
-					<header>
-						<h2>WORKSHOPS</h2>
-					</header>
-					<p>After the talks there is opportunity for our attendees to pick up a new skill. Never coded before? Do not panic, we provide entry level workshops that are suitable for everyone no matter your previous experience or background. Choose from a range of subjects from idea generation to learning how to code. <br /> 
-					We aim to provide attendees with the chance to learn something new.</p>
+					<p>At Women in Technology, you will hear from speakers who identify as women and currently work in the technology industry. <br /> We aim to reflect the diversity of careers that exist within the technology sector through providing talks that cover a wide range of technical roles and disciplines.</p>
 				</div>
 			</article>
 
@@ -87,9 +74,21 @@
 					<header>
 						<h2>NETWORKING</h2>
 					</header>
-					<p>During the Women in Technology conference, we provide our attendees with ample opportunity to network with representatives from local, national and international technology companies. Whether you are interested in tech as a career or just have some questions about specific subjects our partners are on hand to chat to our attendees throughout the day.</p>
+					<p>At the Women in Technology conference you will have the opportunity to network with representatives from local, national and international technology companies.<br /> Whether you are interested in tech as a career or just have some questions about specific subjects our partners are on hand to chat to our attendees throughout the day.</p>
 				</div>
 			</article>
+
+		<!-- Feature 2 -->
+			<article class="container box style1 left">
+				<a href="#" class="image fit"><img src="images/workshop.jpg" alt="" /></a>
+				<div class="inner">
+					<header>
+						<h2>WORKSHOPS</h2>
+					</header>
+					<p>As well as talks there is opportunity for our attendees to pick up a new skill. <br /> Never coded before? <br />Don't panic! We provide entry level workshops that are suitable for everyone no matter your previous experience or background. <br />Choose from a range of subjects from idea generation to learning how to code. We aim to provide you with the chance to learn something new.</p>
+				</div> 
+			</article>
+
 
 		<!-- Previous Event Gallery
 			<article class="container box style2">
@@ -124,20 +123,20 @@
 		<!-- Our Partners  -->
 			<article class="container box style2">
 				<header>
-					<h2>Our Partners</h2>
+					<h2>Our Previous Partners</h2>
 					<p> Every year the Women in Technology event at the University of Nottingham is supported by a range of industry partners.</p><p>
-					If you are interested in becoming an event partner, <a href="mailto:info-wit@hacksocnotts.co.uk">contact us here</a>.</p>
+					If you are interested in becoming an event partner for #WIT17, <a href="mailto:info-wit@hacksocnotts.co.uk">contact us here</a>.</p>
 				</header>
 				<div class="inner gallery">
 					<div class="row 0%">
-						<div class="3u 12u(mobile)"><a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" alt="" title="Ad infinitum" /></a></div>
-						<div class="3u 12u(mobile)"><a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" alt="" title="Dressed in Clarity" /></a></div>
-						<div class="3u 12u(mobile)"><a href="images/fulls/03.jpg" class="image fit"><img src="images/thumbs/03.jpg" alt="" title="Raven" /></a></div>
-						<div class="3u 12u(mobile)"><a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" alt="" title="I'll have a cup of Disneyland, please" /></a></div>
+						<div class="3u 12u(mobile)"> <img src="images/thumbs/C1.svg" class="image fit" title="Capital One" /></div>
+						<div class="3u 12u(mobile)"><img src="images/thumbs/ut.svg" class="image fit" title="ustwo" /></div>
+						<div class="3u 12u(mobile)"><a href="images/thumbs/uon.svg" class="image fit"><img src="images/thumbs/uon.svg" alt="" title="Raven" /></a></div>
+						<div class="3u 12u(mobile)"><a href="images/thumbs/ef.svg" class="image fit"><img src="images/thumbs/ef.svg" alt="" title="I'll have a cup of Disneyland, please" /></a></div>
 					</div>
 					<div class="row 0%">
-						<div class="3u 12u(mobile)"><a href="images/fulls/05.jpg" class="image fit"><img src="images/thumbs/05.jpg" alt="" title="Cherish" /></a></div>
-						<div class="3u 12u(mobile)"><a href="images/fulls/06.jpg" class="image fit"><img src="images/thumbs/06.jpg" alt="" title="Different." /></a></div>
+						<div class="3u 12u(mobile)"><a href="images/thumbs/mlh.svg" class="image fit"><img src="images/thumbs/mlh.svg" alt="" title="Cherish" /></a></div>
+						<div class="3u 12u(mobile)"><a href="" class="image fit"><img src="" alt="" title="Different." /></a></div>
 						<div class="3u 12u(mobile)"><a href="images/fulls/07.jpg" class="image fit"><img src="images/thumbs/07.jpg" alt="" title="History was made here" /></a></div>
 						<div class="3u 12u(mobile)"><a href="images/fulls/08.jpg" class="image fit"><img src="images/thumbs/08.jpg" alt="" title="People come and go and walk away" /></a></div>
 					</div>
@@ -285,7 +284,7 @@
 				<h2>Register</h2>
 			</header>
 			<p>Tickets for #WIT17 will be available very soon! If you would like to receive updates about the next women in technology event please join our interest list. 
-			<form method="post" action="//redroxprojects.us5.list-manage.com/subscribe/post?u=59e0b168dc72e07f6fe47aa04&amp;id=e4e6187a64" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+			<form method="post" action="//hacksocnotts.us7.list-manage.com/subscribe/post?u=c8d745040f228feb789e242cf&amp;id=b14de7bec9" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 				<div class="row">
 					<div class="6u">
 						<input class="text" type="text" name="FNAME" id="mce-FNAME" value="" placeholder="Your Name" />
@@ -316,7 +315,7 @@
 					<h2>Contact Us</h2>
 					<p>Have a question or want to get involved with our next event? Send us a message!</p>
 				</header>
-				<form method="post" action="https://formspree.io/kvn@lws.io">
+				<form method="post" action="https://formspree.io/info-wit@hacksocnotts.co.uk">
 					<div class="row 50%">
 						<div class="6u 12u$(mobile)">
 							<input type="text" class="text" name="name" placeholder="Name" />
@@ -329,7 +328,7 @@
 						</div>
 						<input type="hidden" name="_subject" value="WiT Site Form Submission!" />
 						<input type="text" name="_gotcha" style="display:none" />
-						<input type="hidden" name="_next" value="http://localhost:1337#thanks" />
+						<input type="hidden" name="_next" value="http://inspirewit.com#thanks" />
 						<div class="12u$">
 							<ul class="actions">
 								<li><input type="submit" value="Send Message" /></li>
@@ -347,7 +346,7 @@
 		<div class="copyright">
 			<ul class="menu">
 				<li>&copy; Women in Technology</li>
-				<li>Website created and managed by the <a href="http://hacksocnotts.co.uk">HackSoc </a> community</li>
+				<li>Website created and managed by the <a href="http://hacksocnotts.co.uk">HackSoc </a> community and <a href="http://lws.io">friends</a></li>
 			</ul>
 		</div>
 	</section>
