update to past partners one logo to update

--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@
 					<div class="row 0%">
 						<div class="3u 12u(mobile)"> <img src="images/thumbs/C1.svg" class="image fit" title="Capital One" /></div>
 						<div class="3u 12u(mobile)"><img src="images/thumbs/ut.svg" class="image fit" title="ustwo" /></div>
-						<div class="3u 12u(mobile)"><a href="images/thumbs/uon.svg" class="image fit"><img src="images/thumbs/uon.svg" alt="" title="Raven" /></a></div>
-						<div class="3u 12u(mobile)"><a href="images/thumbs/ef.svg" class="image fit"><img src="images/thumbs/ef.svg" alt="" title="I'll have a cup of Disneyland, please" /></a></div>
+						<div class="3u 12u(mobile)"><img src="images/thumbs/uon.svg" class="image fit" title="University of Nottingham" /></div>
+						<div class="3u 12u(mobile)"><img src="images/thumbs/ef.svg" class="image fit" title="Entrepreneur First" /></div>
 					</div>
 					<div class="row 0%">
-						<div class="3u 12u(mobile)"><a href="images/thumbs/mlh.svg" class="image fit"><img src="images/thumbs/mlh.svg" alt="" title="Cherish" /></a></div>
-						<div class="3u 12u(mobile)"><a href="" class="image fit"><img src="" alt="" title="Different." /></a></div>
-						<div class="3u 12u(mobile)"><a href="images/fulls/07.jpg" class="image fit"><img src="images/thumbs/07.jpg" alt="" title="History was made here" /></a></div>
-						<div class="3u 12u(mobile)"><a href="images/fulls/08.jpg" class="image fit"><img src="images/thumbs/08.jpg" alt="" title="People come and go and walk away" /></a></div>
+						<div class="3u 12u(mobile)"><img src="images/thumbs/mlh.svg" class="image fit" title="Major League Hacking" /></div>
+						<div class="3u 12u(mobile)"><img src="images/thumbs/intsft.svg" class="image fit" title="Intel Software" /></div>
+						<div class="3u 12u(mobile)"><img src="images/thumbs/dstl.svg" class="image fit" title="Defence Science and Technology Laboratory	" /></div>
+						<div class="3u 12u(mobile)"><img src="images/thumbs/uon.svg" class="image fit" title="University of Nottingham" /></div>
 					</div>
 				</div>
 			</article>
