updated previous partner image - links to be added

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 						<div class="3u 12u(mobile)"><img src="images/thumbs/mlh.svg" class="image fit" title="Major League Hacking" /></div>
 						<div class="3u 12u(mobile)"><img src="images/thumbs/intsft.svg" class="image fit" title="Intel Software" /></div>
 						<div class="3u 12u(mobile)"><img src="images/thumbs/dstl.svg" class="image fit" title="Defence Science and Technology Laboratory	" /></div>
-						<div class="3u 12u(mobile)"><img src="images/thumbs/uon.svg" class="image fit" title="University of Nottingham" /></div>
+						<div class="3u 12u(mobile)"><img src="images/thumbs/bcsw.svg" class="image fit" title="BCS Women" /></div>
 					</div>
 				</div>
 			</article>
