--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<link href="assets/fonts/caviar.css" rel="stylesheet">
 	</head>
 	<body>
-		<!-- Nav -->
+		<!-- NAVIGATION -->
 			<section id="nav">
 				<a href="#header" class="scrolly">
 					<img src="images/logo.png">
@@ -29,7 +29,7 @@
 				</a>
 			</section>
 
-		<!-- Header -->
+		<!-- HEADER -->
 			<section id="header">
 				<header>
 					<img src="images/logo-heading.png">
@@ -40,7 +40,7 @@
 				</footer>
 			</section>
 
-		<!-- Banner -->
+		<!-- ABOUT -->
 		<section id="banner">
 			<div class="container">
 				<header>
@@ -56,7 +56,7 @@
 				</footer>
 			</section>
 
-		<!-- Feature 1 -->
+		<!-- TALKS -->
 			<article id="first" class="container box style1 left">
 				<a href="#" class="image fit"><img src="images/talks.jpg" alt="" /></a>
 				<div class="inner">
@@ -67,7 +67,7 @@
 				</div>
 			</article>
 
-		<!-- Feature 3 -->
+		<!-- NETWORKING-->
 			<article class="container box style1 right">
 				<a href="#" class="image fit"><img src="images/network.jpg" alt="" /></a>
 				<div class="inner">
@@ -78,7 +78,7 @@
 				</div>
 			</article>
 
-		<!-- Feature 2 -->
+		<!-- WORKSHOPS -->
 			<article class="container box style1 left">
 				<a href="#" class="image fit"><img src="images/workshop.jpg" alt="" /></a>
 				<div class="inner">
@@ -89,38 +89,7 @@
 				</div> 
 			</article>
 
-
-		<!-- Previous Event Gallery
-			<article class="container box style2">
-				<header>
-					<h2>#WIT16</h2>
-					<p> Below are a few images from our #WIT16 which ran on 20th February 2016.</p>
-				</header>
-				<div class="inner gallery">
-					<div class="row 0%">
-						<div class="3u 12u(mobile)"><a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" alt="" title="Ad infinitum" /></a></div>
-						<div class="3u 12u(mobile)"><a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" alt="" title="Dressed in Clarity" /></a></div>
-						<div class="3u 12u(mobile)"><a href="images/fulls/03.jpg" class="image fit"><img src="images/thumbs/03.jpg" alt="" title="Raven" /></a></div>
-						<div class="3u 12u(mobile)"><a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" alt="" title="I'll have a cup of Disneyland, please" /></a></div>
-					</div>
-					<div class="row 0%">
-						<div class="3u 12u(mobile)"><a href="images/fulls/05.jpg" class="image fit"><img src="images/thumbs/05.jpg" alt="" title="Cherish" /></a></div>
-						<div class="3u 12u(mobile)"><a href="images/fulls/06.jpg" class="image fit"><img src="images/thumbs/06.jpg" alt="" title="Different." /></a></div>
-						<div class="3u 12u(mobile)"><a href="images/fulls/07.jpg" class="image fit"><img src="images/thumbs/07.jpg" alt="" title="History was made here" /></a></div>
-						<div class="3u 12u(mobile)"><a href="images/fulls/08.jpg" class="image fit"><img src="images/thumbs/08.jpg" alt="" title="People come and go and walk away" /></a></div>
-					</div>
-					<div class="6u 12u(mobile)">
-						<h3>This is a FAQ point</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto ipsum dolores amet explicabo eveniet. Impedit, dolore. Quasi nulla, qui quam at eveniet suscipit delectus numquam commodi, repellendus totam tenetur, doloribus.</p>
-					</div>
-					<div class="6u 12u(mobile)">
-						<h3>This is a FAQ point</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto ipsum dolores amet explicabo eveniet. Impedit, dolore. Quasi nulla, qui quam at eveniet suscipit delectus numquam commodi, repellendus totam tenetur, doloribus.</p>
-					</div>
-				</div>
-			</article>-->
-
-		<!-- Our Partners  -->
+		<!-- PARTNERSHIP INFORMATION !--> 
 			<article class="container box style2">
 				<header>
 					<h2>Our Previous Partners</h2>
@@ -129,63 +98,23 @@
 				</header>
 				<div class="inner gallery">
 					<div class="row 0%">
-						<div class="3u 12u(mobile)"> <img src="images/thumbs/C1.svg" class="image fit" title="Capital One" /></div>
-						<div class="3u 12u(mobile)"><img src="images/thumbs/ut.svg" class="image fit" title="ustwo" /></div>
-						<div class="3u 12u(mobile)"><img src="images/thumbs/uon.svg" class="image fit" title="University of Nottingham" /></div>
-						<div class="3u 12u(mobile)"><img src="images/thumbs/ef.svg" class="image fit" title="Entrepreneur First" /></div>
+						<div class="3u 12u(mobile)"><!--<a href="http://www.capitalonecareers.co.uk/">!--><img src="images/thumbs/C1.svg" class="image fit" title="Capital One" /></div>
+						<div class="3u 12u(mobile)"><!--<a href="https://ustwo.com/">!--><img src="images/thumbs/ut.svg" class="image fit" title="ustwo" /></div>
+						<div class="3u 12u(mobile)"><!--<a href="http://www.nottingham.ac.uk/computerscience/">!--><img src="images/thumbs/uon.svg" class="image fit" title="University of Nottingham" /></div>
+						<div class="3u 12u(mobile)"><!--<a href="https://www.joinef.com/">!--><img src="images/thumbs/ef.svg" class="image fit" title="Entrepreneur First" /></div>
 					</div>
 					<div class="row 0%">
-						<div class="3u 12u(mobile)"><img src="images/thumbs/mlh.svg" class="image fit" title="Major League Hacking" /></div>
-						<div class="3u 12u(mobile)"><img src="images/thumbs/intsft.svg" class="image fit" title="Intel Software" /></div>
-						<div class="3u 12u(mobile)"><img src="images/thumbs/dstl.svg" class="image fit" title="Defence Science and Technology Laboratory	" /></div>
-						<div class="3u 12u(mobile)"><img src="images/thumbs/bcsw.svg" class="image fit" title="BCS Women" /></div>
+						<div class="3u 12u(mobile)"><!--<a href="https://mlh.io/">!--><img src="images/thumbs/mlh.svg" class="image fit" title="Major League Hacking" /></div>
+						<div class="3u 12u(mobile)"><!--<a href="http://www.intel.co.uk/content/www/uk/en/homepage.html">!--><img src="images/thumbs/intsft.svg" class="image fit" title="Intel Software" /></div>
+						<div class="3u 12u(mobile)"><!--<a href="http:/http://bcswomen.bcs.org/">!--><img src="images/thumbs/dstl.svg" class="image fit" title="Defence Science and Technology Laboratory" /></div>
+						<div class="3u 12u(mobile)"><!--<a href="http://bcswomen.bcs.org/">!--><img src="images/thumbs/bcsw.svg" class="image fit" title="BCS Women"/></div>
 					</div>
 				</div>
 			</article>
 
-		<!-- Generic -->
+		<!-- FAQ SECTION !--> 
 		
 		<article class="container box style3">
-		<!--
-			<header>
-				<h2>Generic Box</h2>
-				<p>Just a generic box. Nothing to see here.</p>
-			</header>
-			<section>
-				<header>
-					<h3>Paragraph</h3>
-					<p>This is a subtitle</p>
-				</header>
-				<p>Phasellus nisl nisl, varius id <sup>porttitor sed pellentesque</sup> ac orci. Pellentesque
-					habitant <strong>strong</strong> tristique <b>bold</b> et netus <i>italic</i> malesuada <em>emphasized</em> ac turpis egestas. Morbi
-					leo suscipit ut. Praesent <sub>id turpis vitae</sub> turpis pretium ultricies. Vestibulum sit
-				amet risus elit.</p>
-			</section> -->
-
-		<!--	<section>
-				<header>
-					<h3>Blockquote</h3>
-				</header>
-				<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget.
-				tempus euismod. Vestibulum ante ipsum primis in faucibus.</blockquote>
-			</section> -->
-
-		<!--	<section>
-				<header>
-					<h3>Divider</h3>
-				</header>
-				<p>Donec consectetur <a href="#">vestibulum dolor et pulvinar</a>. Etiam vel felis enim, at viverra
-				ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
-				facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
-				tempus euismod. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-			posuere cubilia.</p>
-			<hr />
-			<p>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
-				ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
-				facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
-				tempus euismod. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-			posuere cubilia.</p>
-		</section> -->
 
 		<section id="faq">
 			<header>
@@ -218,67 +147,9 @@
 				</li>
 			</ul>
 		</section>
-		<!-- <section>
-			<header>
-				<h3>Ordered List</h3>
-			</header>
-			<ol class="default">
-				<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
-				<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
-				<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
-				<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
-			</ol>
-		</section> -->
-		<!-- <section>
-			<header>
-				<h3>Table</h3>
-			</header>
-			<div class="table-wrapper">
-				<table class="default">
-					<thead>
-						<tr>
-							<th>ID</th>
-							<th>Name</th>
-							<th>Description</th>
-							<th>Price</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td>45815</td>
-							<td>Something</td>
-							<td>Ut porttitor sagittis lorem quis nisi ornare.</td>
-							<td>29.99</td>
-						</tr>
-						<tr>
-							<td>24524</td>
-							<td>Nothing</td>
-							<td>Ut porttitor sagittis lorem quis nisi ornare.</td>
-							<td>19.99</td>
-						</tr>
-						<tr>
-							<td>45815</td>
-							<td>Something</td>
-							<td>Ut porttitor sagittis lorem quis nisi ornare.</td>
-							<td>29.99</td>
-						</tr>
-						<tr>
-							<td>24524</td>
-							<td>Nothing</td>
-							<td>Ut porttitor sagittis lorem quis nisi ornare.</td>
-							<td>19.99</td>
-						</tr>
-					</tbody>
-					<tfoot>
-					<tr>
-						<td colspan="3"></td>
-						<td>100.00</td>
-					</tr>
-					</tfoot>
-				</table>
-			</div>
-		</section> --> 
 
+
+		<!-- REGISTER MAILING LIST !--> 
 		<section id="reg">
 			<header>
 				<h2>Register</h2>
@@ -309,7 +180,7 @@
 		</section>
 	</article>
 
-	<!-- Contact -->
+	<!-- CONTACT FORM -->
 			<article id="contact" class="container box style3">
 				<header>
 					<h2>Contact Us</h2>
