updated talks photo slight typo

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 		<!-- TALKS -->
 			<article id="first" class="container box style1 left">
-				<a href="#" class="image fit"><img src="images/talks.jpg" alt="" /></a>
+				<a href="#" class="image fit"><img src="images/Talks.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
 						<h2>TALKS</h2>
