--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 		<div class="copyright">
 			<ul class="menu">
 				<li>&copy; Women in Technology</li>
-				<li>Website created and managed by the <a href="http://hacksocnotts.co.uk">HackSoc </a> communit</li>
+				<li>Website created and managed by the <a href="http://hacksocnotts.co.uk">HackSoc </a>community</li>
 			</ul>
 		</div>
 	</section>
