updated date onto header

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 				<header>
 					<img src="images/logo-heading.png">
 					<p> <span class="inspired">Women inspiring Everyone</span></p>
+					<br> <h2> 18th February 2017</h2></br>
 				</header>
 				<footer>
 					<a href="#reg" class="button style2 scrolly-middle">Add me to the #WIT17 interest list</a>
