updated to include og image

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 -->
 <html>
 	<head>
+		<meta property="og:image" content="http://inspirewit.com/images/wit.png"> 
 		<title>Women in Technology</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
