--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 					<ul>
 						<li><a href="#banner" class="scrolly">About</a></li>
 						<li><a href="#faq" class="scrolly">FAQ</a></li>
-						<li><a href="#reg" class="scrolly">Register</a></li>
 						<li><a href="#contact" class="scrolly">Contact</a></li>
+						<li><a href="https://www.eventbrite.co.uk/e/uon-women-in-technology-wit17-tickets-30123068910" target="_blank" class="scrolly">Tickets</a></li>
 					</ul>
 				</a>
 			</section>
@@ -38,7 +38,7 @@
 					<br> <h2> 18th February 2017</h2></br>
 				</header>
 				<footer>
-					<a href="#reg" class="button style2 scrolly-middle">Add me to the #WIT17 interest list</a>
+					<a href="https://www.eventbrite.co.uk/e/uon-women-in-technology-wit17-tickets-30123068910" target="_blank" class="button style2 scrolly-middle">Get Tickets to #WIT17 here</a>
 				</footer>
 			</section>
 
@@ -152,7 +152,7 @@
 
 
 		<!-- REGISTER MAILING LIST !--> 
-		<section id="reg">
+		<!-- <section id="reg">
 			<header>
 				<h2>Register</h2>
 			</header>
@@ -179,7 +179,7 @@
 					</div>
 				</div>
 			</form>
-		</section>
+		</section> -->
 	</article>
 
 	<!-- CONTACT FORM -->
