update to include sponsor logos - plus section for speaker updates, currently commented out until ready to release

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 					<img src="images/logo.png">
 					<ul>
 						<li><a href="#banner" class="scrolly">About</a></li>
+						<li><a href="#schedule" class="scrolly">Schedule</a></li>
 						<li><a href="#faq" class="scrolly">FAQ</a></li>
 						<li><a href="#contact" class="scrolly">Contact</a></li>
 						<li><a href="https://www.eventbrite.co.uk/e/uon-women-in-technology-wit17-tickets-30123068910" target="_blank" class="scrolly">Tickets</a></li>
@@ -53,10 +54,166 @@
 				<p>Only 14.4% of STEM jobs in the UK are occupied by women and out of all the CS students in the UK only 17.4% are female. This event strives to celebrate the individuals behind the figures, and share their fascinating life experiences in the tech industry.</p>
 
 				<p>HackSoc and the University of Nottingham have teamed up to inspire and encourage students to pursue technology as a hobby or as a career.</p>
-				<footer>
-					<a href="#first" class="button style2 scrolly">What happens at Women in Technology?</a>
-				</footer>
 			</section>
+
+		<!-- 2017 PARTNERSHIP INFORMATION !--> 
+			<article class="container box style2">
+				<header>
+					<h2>Our 2017 Partners</h2>
+					<p> The #WIT17 event at the University of Nottingham is supported by the following industry partners!</p>
+					<p> If you are interested in becoming an event partner for #WIT17, <a href="mailto:info-wit@hacksocnotts.co.uk">contact us here</a>.</p>
+				</header>
+				<div class="inner gallery">
+					<div class="row 0%">
+						<div class="3u 12u(mobile)"><img src="images/thumbs/github.svg" class="image fit" title="GitHub" /></div>
+						<div class="3u 12u(mobile)"><img src="images/thumbs/mhr.png" class="image fit" title="MHR" /></div>
+						<div class="3u 12u(mobile)"><img src="images/thumbs/esendex.svg" class="image fit" title="Esendex" /></div>
+						<div class="3u 12u(mobile)"><img src="images/thumbs/nationwide.svg" class="image fit" title="Nationwide" /></div>
+					</div>
+				<!--	<div class="row 0%">
+						<div class="3u 12u(mobile)"><img src="images/thumbs/mlh.svg" class="image fit" title="Major League Hacking" /></div>
+						<div class="3u 12u(mobile)"><img src="images/thumbs/intsft.svg" class="image fit" title="Intel Software" /></div>
+						<div class="3u 12u(mobile)"><img src="images/thumbs/dstl.svg" class="image fit" title="Defence Science and Technology Laboratory" /></div>
+						<div class="3u 12u(mobile)"><img src="images/thumbs/bcsw.svg" class="image fit" title="BCS Women"/></div>
+					</div>-->
+				</div>
+			</article>
+		
+		<!-- EVENT INFO -->
+		<article class="container box style3">
+				<header>
+					<h2>Women in Tech Event Info</h2>
+					<h3>18th February 2017</h3>
+				</header>
+
+		<!-- SCHEDULE -->
+				<section id="schedule">
+					<header>
+						<h3>Event Schedule</h3>
+					</header>
+					<div class="table-wrapper">
+						<table class="default">
+							<thead>
+								<tr>
+									<th>Time</th>
+									<th>Activity</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>09:30</td>
+									<td>Doors Open / Registration</td>
+								</tr>
+								<tr>
+									<td>10:00</td>
+									<td>Introduction to #WIT17</td>
+								</tr>
+								<tr>
+									<td>10:05</td>
+									<td>Talks Begin</td>
+								</tr>
+								<tr>
+									<td>11:20</td>
+									<td>Refreshment Break</td>
+								</tr>
+								<tr>
+									<td>11:30</td>
+									<td>Talks Resume</td>
+								</tr>
+								<tr>
+									<td>12:45</td>
+									<td>Lunch & Networking</td>
+								</tr>
+								<tr>
+									<td>13:45</td>
+									<td>Workshops (1st Session)</td>
+								</tr>
+								<tr>
+									<td>14:45</td>
+									<td>Refreshment Break</td>
+								</tr>
+								<tr>
+									<td>15:15</td>
+									<td>Workshops (2nd Session)</td>
+								</tr>
+								<tr>
+									<td>16:15</td>
+									<td>Closing Talk & Thanks</td>
+								</tr>
+								<tr>
+									<td>16:30</td>
+									<td>Cake Drop & Networking</td>
+								</tr>
+								<tr>
+									<td>17:30</td>
+									<td>Event Close</td>
+								</tr>
+							</tbody>
+							<tfoot>
+								<tr>
+									<td colspan="2"></td>
+								</tr>
+							</tfoot>
+						</table>
+					</div>
+				</section>
+
+		<!-- SPEAKER DETAIL
+				<header>
+					<h3>Who is at Women in tech 2017?</h3>
+				</header>
+				<section>
+					<p>At Women in Technology, you will hear from speakers who identify as women and currently work in the technology industry. We aim to reflect the diversity of careers that exist within the technology sector through providing talks that cover a wide range of technical roles and disciplines.</p>
+					<header>
+						<p>Presenting the WIT17 Speakers...</p>
+					</header>
+					<header>
+						<h5>Jess Rose</h5>
+					</header>
+					<p>Phasellus nisl nisl, varius id <sup>porttitor sed pellentesque</sup> ac orci. Pellentesque
+					habitant <strong>strong</strong> tristique <b>bold</b> et netus <i>italic</i> malesuada <em>emphasized</em> ac turpis egestas. Morbi
+					leo suscipit ut. Praesent <sub>id turpis vitae</sub> turpis pretium ultricies. Vestibulum sit
+					amet risus elit.</p>
+
+					<header>
+						<h5>Timea Tabori</h5>
+					</header>
+					<p>Timea Tabori is an Engine Programmer at Rockstar North and the Chair of IGDA Scotland.  She is a STEM and Video Game Ambassador and CoderDojo mentor working to highlight career opportunities in digital technology to young people, especially women. She is passionate about bringing diversity and new voices to the games industry and creating playful experiences for everyone through improved collaboration.</p>
+
+					<header>
+						<h5>Julia Higginbottom</h5>
+					</header>
+					<p>Phasellus nisl nisl, varius id <sup>porttitor sed pellentesque</sup> ac orci. Pellentesque
+					habitant <strong>strong</strong> tristique <b>bold</b> et netus <i>italic</i> malesuada <em>emphasized</em> ac turpis egestas. Morbi
+					leo suscipit ut. Praesent <sub>id turpis vitae</sub> turpis pretium ultricies. Vestibulum sit
+					amet risus elit.</p>
+
+					<header>
+						<h5>Charlie Allen</h5>
+					</header>
+					<p>Phasellus nisl nisl, varius id <sup>porttitor sed pellentesque</sup> ac orci. Pellentesque
+					habitant <strong>strong</strong> tristique <b>bold</b> et netus <i>italic</i> malesuada <em>emphasized</em> ac turpis egestas. Morbi
+					leo suscipit ut. Praesent <sub>id turpis vitae</sub> turpis pretium ultricies. Vestibulum sit
+					amet risus elit.</p>
+
+					<header>
+						<h5>Alice Casey</h5>
+					</header>
+					<p>Phasellus nisl nisl, varius id <sup>porttitor sed pellentesque</sup> ac orci. Pellentesque
+					habitant <strong>strong</strong> tristique <b>bold</b> et netus <i>italic</i> malesuada <em>emphasized</em> ac turpis egestas. Morbi
+					leo suscipit ut. Praesent <sub>id turpis vitae</sub> turpis pretium ultricies. Vestibulum sit
+					amet risus elit.</p>
+
+					<header>
+						<h5>Kate Devlin</h5>
+					</header>
+					<p>Phasellus nisl nisl, varius id <sup>porttitor sed pellentesque</sup> ac orci. Pellentesque
+					habitant <strong>strong</strong> tristique <b>bold</b> et netus <i>italic</i> malesuada <em>emphasized</em> ac turpis egestas. Morbi
+					leo suscipit ut. Praesent <sub>id turpis vitae</sub> turpis pretium ultricies. Vestibulum sit
+					amet risus elit.</p>
+				</section> -->
+		</article>
+				
 
 		<!-- TALKS -->
 			<article id="first" class="container box style1 left">
@@ -91,12 +248,11 @@
 				</div> 
 			</article>
 
-		<!-- PARTNERSHIP INFORMATION !--> 
+
+		<!-- PAST PARTNERSHIP INFORMATION !--> 
 			<article class="container box style2">
 				<header>
-					<h2>Our Previous Partners</h2>
-					<p> Every year the Women in Technology event at the University of Nottingham is supported by a range of industry partners.</p><p>
-					If you are interested in becoming an event partner for #WIT17, <a href="mailto:info-wit@hacksocnotts.co.uk">contact us here</a>.</p>
+					<h2>Previous Women in Tech Partners</h2>
 				</header>
 				<div class="inner gallery">
 					<div class="row 0%">
