Added speakers section template

--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
 				<a href="#header" class="scrolly">
 					<img src="images/logo.png">
 					<ul>
-						<li><a href="#banner" class="scrolly">About</a></li>
+						<li><a href="#banner" class="scrolly not-mob">About</a></li>
 						<li><a href="#schedule" class="scrolly">Schedule</a></li>
+						<li><a href="#speakers" class="scrolly not-mob">Speakers</a></li>
 						<li><a href="#faq" class="scrolly">FAQ</a></li>
-						<li><a href="#contact" class="scrolly">Contact</a></li>
+						<li><a href="#contact" class="scrolly not-mob">Contact</a></li>
 						<li><a href="https://www.eventbrite.co.uk/e/uon-women-in-technology-wit17-tickets-30123068910" target="_blank" class="scrolly">Tickets</a></li>
 					</ul>
 				</a>
@@ -157,7 +158,60 @@
 						</table>
 					</div>
 				</section>
-
+				
+				<section id="speakers">
+					<header>
+						<h3>Speakers</h3>
+						<p>At Women in Technology, you will hear from speakers who identify as women and currently work in the technology industry. We aim to reflect the diversity of careers that exist within the technology sector through providing talks that cover a wide range of technical roles and disciplines.</p>
+					</header>
+					<ul>
+						<li>
+							<img src="http://placehold.it/500/500">
+							<div class="info">
+								<div class="name">Jess Rose</div>
+								<div class="bio">
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium non commodi dignissimos corrupti aliquam cumque, accusamus, ipsa ut assumenda expedita. Qui, cumque voluptate odio iste maxime laborum nihil nemo officiis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed molestiae consequatur sint earum labore numquam voluptates doloremque fugiat. Temporibus laborum error et corrupti deleniti provident nulla vitae commodi praesentium! In.
+								</div>
+							</div>
+						</li>
+						<li>
+							<img src="http://placehold.it/500/500">
+							<div class="info">
+								<div class="name">Timea Tabori</div>
+								<div class="bio">
+									Timea Tabori is an Engine Programmer at Rockstar North and the Chair of IGDA Scotland.  She is a STEM and Video Game Ambassador and CoderDojo mentor working to highlight career opportunities in digital technology to young people, especially women. She is passionate about bringing diversity and new voices to the games industry and creating playful experiences for everyone through improved collaboration.
+								</div>
+							</div>
+						</li>
+						<li>
+							<img src="http://placehold.it/500/500">
+							<div class="info">
+								<div class="name">Jane Doe</div>
+								<div class="bio">
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta corporis obcaecati iusto cupiditate nobis quas, nostrum, pariatur voluptate inventore a quidem, veritatis, animi fugit recusandae consectetur voluptatum! Debitis eius, eos. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat inventore dolores quod tenetur doloremque tempora itaque totam sint a accusamus consectetur amet accusantium deserunt, tempore. Omnis laboriosam eos quam id.
+								</div>
+							</div>
+						</li>
+						<li>
+							<img src="http://placehold.it/500/500">
+							<div class="info">
+								<div class="name">Jane Doe</div>
+								<div class="bio">
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta corporis obcaecati iusto cupiditate nobis quas, nostrum, pariatur voluptate inventore a quidem, veritatis, animi fugit recusandae consectetur voluptatum! Debitis eius, eos. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat inventore dolores quod tenetur doloremque tempora itaque totam sint a accusamus consectetur amet accusantium deserunt, tempore. Omnis laboriosam eos quam id.
+								</div>
+							</div>
+						</li>
+						<li>
+							<img src="http://placehold.it/500/500">
+							<div class="info">
+								<div class="name">Jane Doe</div>
+								<div class="bio">
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta corporis obcaecati iusto cupiditate nobis quas, nostrum, pariatur voluptate inventore a quidem, veritatis, animi fugit recusandae consectetur voluptatum! Debitis eius, eos. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat inventore dolores quod tenetur doloremque tempora itaque totam sint a accusamus consectetur amet accusantium deserunt, tempore. Omnis laboriosam eos quam id.
+								</div>
+							</div>
+						</li>
+					</ul>
+				</section>
 		<!-- SPEAKER DETAIL
 				<header>
 					<h3>Who is at Women in tech 2017?</h3>
