Hidden some nav items on mobile

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 				<a href="#header" class="scrolly">
 					<img src="images/logo.png">
 					<ul>
-						<li><a href="#banner" class="scrolly not-mob">About</a></li>
-						<li><a href="#schedule" class="scrolly">Schedule</a></li>
-						<li><a href="#speakers" class="scrolly not-mob">Speakers</a></li>
+						<li><a href="#banner" class="scrolly">About</a></li>
+						<li class="not-mob"><a href="#schedule" class="scrolly">Schedule</a></li>
+						<li class="not-mob"><a href="#speakers" class="scrolly">Speakers</a></li>
 						<li><a href="#faq" class="scrolly">FAQ</a></li>
-						<li><a href="#contact" class="scrolly not-mob">Contact</a></li>
-						<li><a href="https://www.eventbrite.co.uk/e/uon-women-in-technology-wit17-tickets-30123068910" target="_blank" class="scrolly">Tickets</a></li>
+						<li><a href="#contact" class="scrolly">Contact</a></li>
+						<li class="not-mob"><a href="https://www.eventbrite.co.uk/e/uon-women-in-technology-wit17-tickets-30123068910" target="_blank" class="scrolly">Tickets</a></li>
 					</ul>
 				</a>
 			</section>
