updated first speaker info and structure for announcing event speakers. Removed generic talks section as now in speaker header.

--- a/index.html
+++ b/index.html
@@ -166,16 +166,7 @@
 					</header>
 					<ul>
 						<li>
-							<img src="http://placehold.it/500/500">
-							<div class="info">
-								<div class="name">Jess Rose</div>
-								<div class="bio">
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium non commodi dignissimos corrupti aliquam cumque, accusamus, ipsa ut assumenda expedita. Qui, cumque voluptate odio iste maxime laborum nihil nemo officiis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed molestiae consequatur sint earum labore numquam voluptates doloremque fugiat. Temporibus laborum error et corrupti deleniti provident nulla vitae commodi praesentium! In.
-								</div>
-							</div>
-						</li>
-						<li>
-							<img src="http://placehold.it/500/500">
+							<img src="images/timea.jpeg">
 							<div class="info">
 								<div class="name">Timea Tabori</div>
 								<div class="bio">
@@ -183,10 +174,19 @@
 								</div>
 							</div>
 						</li>
+					<!--<li>
+							<img src="http://placehold.it/500/500">
+							<div class="info">
+								<div class="name">Jess Rose</div>
+								<div class="bio">
+									Jessica Rose is a self taught technologist focused on helping increase access to technical education and meaningful work in tech. She's leading developer outreach efforts at CrateDB as their head of developer relations, founded the Open Code meetup series and co-founded Trans*Code.
+								</div>
+							</div>
+						</li>
 						<li>
 							<img src="http://placehold.it/500/500">
 							<div class="info">
-								<div class="name">Jane Doe</div>
+								<div class="name">Julia Higginbottom</div>
 								<div class="bio">
 									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta corporis obcaecati iusto cupiditate nobis quas, nostrum, pariatur voluptate inventore a quidem, veritatis, animi fugit recusandae consectetur voluptatum! Debitis eius, eos. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat inventore dolores quod tenetur doloremque tempora itaque totam sint a accusamus consectetur amet accusantium deserunt, tempore. Omnis laboriosam eos quam id.
 								</div>
@@ -195,7 +195,16 @@
 						<li>
 							<img src="http://placehold.it/500/500">
 							<div class="info">
-								<div class="name">Jane Doe</div>
+								<div class="name">Charlie Allen</div>
+								<div class="bio">
+									Charlie is a former administrator of nearly 10 years, who only recently learned to code having never previously thought she could. Charlie now works for a small Rails agency in central London, and am also a coach and co-organiser with the London RailsGirls group. She is passionate about gender diversity in STEM.
+								</div>
+							</div>
+						</li>
+						<li>
+							<img src="http://placehold.it/500/500">
+							<div class="info">
+								<div class="name">Alice Casey</div>
 								<div class="bio">
 									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta corporis obcaecati iusto cupiditate nobis quas, nostrum, pariatur voluptate inventore a quidem, veritatis, animi fugit recusandae consectetur voluptatum! Debitis eius, eos. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat inventore dolores quod tenetur doloremque tempora itaque totam sint a accusamus consectetur amet accusantium deserunt, tempore. Omnis laboriosam eos quam id.
 								</div>
@@ -204,72 +213,73 @@
 						<li>
 							<img src="http://placehold.it/500/500">
 							<div class="info">
-								<div class="name">Jane Doe</div>
+								<div class="name">Kate Devlin</div>
 								<div class="bio">
 									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta corporis obcaecati iusto cupiditate nobis quas, nostrum, pariatur voluptate inventore a quidem, veritatis, animi fugit recusandae consectetur voluptatum! Debitis eius, eos. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat inventore dolores quod tenetur doloremque tempora itaque totam sint a accusamus consectetur amet accusantium deserunt, tempore. Omnis laboriosam eos quam id.
 								</div>
 							</div>
 						</li>
+						<li>
+							<img src="http://placehold.it/500/500">
+							<div class="info">
+								<div class="name">Lizzie Lang</div>
+								<div class="bio">
+									Lizzie is a UC Berkeley graduate and Silicon Valley native who manages a sales team responsible for launching UberEATS in UK expansion cities. She started her career with the San Francisco-based tech company in operations and logistics - setting up the Uber rides business in several UK cities including Sheffield, Southampton, York and Nottingham. 
+								</div>
+							</div>
+						</li>
+						<li>
+							<img src="http://placehold.it/500/500">
+							<div class="info">
+								<div class="name">Melinda Seckington</div>
+								<div class="bio">
+									Melinda is a developer at FutureLearn, a social learning platform, and leads the team’s employee evangelism. She loves attending BarCamps, Hackdays and other tech meet ups, and since 2009 has been organising them at Geeks of London. She also writes at MissGeeky, a blog about all things geeky and girly. When she’s not busy with events or blogging, you can find Melinda curled up on her couch with a good book or video game. 
+"
+								</div>
+							</div>
+						</li>
+						<li>
+							<img src="http://placehold.it/500/500">
+							<div class="info">
+								<div class="name">Paula Clerkin</div>
+								<div class="bio">
+									Paula is a University of Nottingham Graduate Computer Scientist now working at the Defence Science Technology Lab. In 2014 Paula founded the Women in Tech Conference at The University of Nottingham - this very event! On top of this, just last year Paula was awarded the Vice Chancellor's award for her achievements. 
+								</div>
+							</div>
+						</li>
+						<li>
+							<img src="http://placehold.it/500/500">
+							<div class="info">
+								<div class="name">Jess White</div>
+								<div class="bio">
+									Jessica is a Nottingham-based developer at Oakbrook Finance. As well as writing code, Jessica helps organise WIT Notts and would love to hear from potential speakers. Some say Jessica is a caffiene powered half hobbit, but she hasn't found any magical rings lately.
+								</div>
+							</div>
+						</li>
+						<li>
+							<img src="http://placehold.it/500/500">
+							<div class="info">
+								<div class="name">Mergime Raci</div>
+								<div class="bio">
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta corporis obcaecati iusto cupiditate nobis quas, nostrum, pariatur voluptate inventore a quidem, veritatis, animi fugit recusandae consectetur voluptatum! Debitis eius, eos. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat inventore dolores quod tenetur doloremque tempora itaque totam sint a accusamus consectetur amet accusantium deserunt, tempore. Omnis laboriosam eos quam id.
+								</div>
+							</div>
+						</li>
+						<li>
+							<img src="http://placehold.it/500/500">
+							<div class="info">
+								<div class="name">SPONSOR</div>
+								<div class="bio">
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta corporis obcaecati iusto cupiditate nobis quas, nostrum, pariatur voluptate inventore a quidem, veritatis, animi fugit recusandae consectetur voluptatum! Debitis eius, eos. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat inventore dolores quod tenetur doloremque tempora itaque totam sint a accusamus consectetur amet accusantium deserunt, tempore. Omnis laboriosam eos quam id.
+								</div>
+							</div>
+						</li>-->
 					</ul>
 				</section>
-		<!-- SPEAKER DETAIL
-				<header>
-					<h3>Who is at Women in tech 2017?</h3>
-				</header>
-				<section>
-					<p>At Women in Technology, you will hear from speakers who identify as women and currently work in the technology industry. We aim to reflect the diversity of careers that exist within the technology sector through providing talks that cover a wide range of technical roles and disciplines.</p>
-					<header>
-						<p>Presenting the WIT17 Speakers...</p>
-					</header>
-					<header>
-						<h5>Jess Rose</h5>
-					</header>
-					<p>Phasellus nisl nisl, varius id <sup>porttitor sed pellentesque</sup> ac orci. Pellentesque
-					habitant <strong>strong</strong> tristique <b>bold</b> et netus <i>italic</i> malesuada <em>emphasized</em> ac turpis egestas. Morbi
-					leo suscipit ut. Praesent <sub>id turpis vitae</sub> turpis pretium ultricies. Vestibulum sit
-					amet risus elit.</p>
-
-					<header>
-						<h5>Timea Tabori</h5>
-					</header>
-					<p>Timea Tabori is an Engine Programmer at Rockstar North and the Chair of IGDA Scotland.  She is a STEM and Video Game Ambassador and CoderDojo mentor working to highlight career opportunities in digital technology to young people, especially women. She is passionate about bringing diversity and new voices to the games industry and creating playful experiences for everyone through improved collaboration.</p>
-
-					<header>
-						<h5>Julia Higginbottom</h5>
-					</header>
-					<p>Phasellus nisl nisl, varius id <sup>porttitor sed pellentesque</sup> ac orci. Pellentesque
-					habitant <strong>strong</strong> tristique <b>bold</b> et netus <i>italic</i> malesuada <em>emphasized</em> ac turpis egestas. Morbi
-					leo suscipit ut. Praesent <sub>id turpis vitae</sub> turpis pretium ultricies. Vestibulum sit
-					amet risus elit.</p>
-
-					<header>
-						<h5>Charlie Allen</h5>
-					</header>
-					<p>Phasellus nisl nisl, varius id <sup>porttitor sed pellentesque</sup> ac orci. Pellentesque
-					habitant <strong>strong</strong> tristique <b>bold</b> et netus <i>italic</i> malesuada <em>emphasized</em> ac turpis egestas. Morbi
-					leo suscipit ut. Praesent <sub>id turpis vitae</sub> turpis pretium ultricies. Vestibulum sit
-					amet risus elit.</p>
-
-					<header>
-						<h5>Alice Casey</h5>
-					</header>
-					<p>Phasellus nisl nisl, varius id <sup>porttitor sed pellentesque</sup> ac orci. Pellentesque
-					habitant <strong>strong</strong> tristique <b>bold</b> et netus <i>italic</i> malesuada <em>emphasized</em> ac turpis egestas. Morbi
-					leo suscipit ut. Praesent <sub>id turpis vitae</sub> turpis pretium ultricies. Vestibulum sit
-					amet risus elit.</p>
-
-					<header>
-						<h5>Kate Devlin</h5>
-					</header>
-					<p>Phasellus nisl nisl, varius id <sup>porttitor sed pellentesque</sup> ac orci. Pellentesque
-					habitant <strong>strong</strong> tristique <b>bold</b> et netus <i>italic</i> malesuada <em>emphasized</em> ac turpis egestas. Morbi
-					leo suscipit ut. Praesent <sub>id turpis vitae</sub> turpis pretium ultricies. Vestibulum sit
-					amet risus elit.</p>
-				</section> -->
 		</article>
 				
 
-		<!-- TALKS -->
+		<!-- TALKS 
 			<article id="first" class="container box style1 left">
 				<a href="#" class="image fit"><img src="images/Talks.jpg" alt="" /></a>
 				<div class="inner">
@@ -278,7 +288,7 @@
 					</header>
 					<p>At Women in Technology, you will hear from speakers who identify as women and currently work in the technology industry. <br /> We aim to reflect the diversity of careers that exist within the technology sector through providing talks that cover a wide range of technical roles and disciplines.</p>
 				</div>
-			</article>
+			</article> -->
 
 		<!-- NETWORKING-->
 			<article class="container box style1 right">
