updated html filepath to point to correct image

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 					</header>
 					<ul>
 						<li>
-							<img src="images/timea.jpeg">
+							<img src="images/Timea.jpeg">
 							<div class="info">
 								<div class="name">Timea Tabori</div>
 								<div class="bio">
