Updated second speaker info and image

--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
 								</div>
 							</div>
 						</li>
-					<!--<li>
-							<img src="http://placehold.it/500/500">
+						<li>
+							<img src="images/JessR.jpg">
 							<div class="info">
 								<div class="name">Jess Rose</div>
 								<div class="bio">
@@ -183,7 +183,7 @@
 								</div>
 							</div>
 						</li>
-						<li>
+						<!--<li>
 							<img src="http://placehold.it/500/500">
 							<div class="info">
 								<div class="name">Julia Higginbottom</div>
